// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ToolBar tool bar 1`] = `
<div
  className="logs-console-toolbar"
>
  <button
    className="ui icon button pull-left clear-button"
    onClick={[Function]}
    role="button"
  >
    <i
      aria-hidden="true"
      className="trash alternate outline icon"
    />
  </button>
  <span
    className="filter-message.id pull-right"
  >
    <label
      htmlFor="dropdown"
    >
      Activity Id
    </label>
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      />
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="left menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            id4
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    className="filter-logger pull-right"
  >
    <label
      htmlFor="dropdown"
    >
      Logger
    </label>
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      />
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="left menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            http.tracelog.downstream
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    className="filter-message.path pull-right"
  >
    <label
      htmlFor="dropdown"
    >
      Path
    </label>
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      />
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="left menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            /path4
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    className="filter-message.direction pull-right"
  >
    <label
      htmlFor="dropdown"
    >
      Inbound/Outbound
    </label>
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      />
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="left menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            direction
          </span>
        </div>
      </div>
    </div>
  </span>
  <span
    className="filter-message.httpMethod pull-right"
  >
    <label
      htmlFor="dropdown"
    >
      Method
    </label>
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-live="polite"
        className="text"
        role="alert"
      >
        All
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="left menu transition"
      >
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            All
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            POST
          </span>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots trace list list traces 1`] = `
<div
  id="logs-console"
>
  <div
    className="ui grid"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    <div
      className="row table-heading"
    >
      <div
        className="column summary"
      >
         
      </div>
      <div
        className="column activity"
      >
        Activity Id
      </div>
      <div
        className="column time"
      >
        Time
      </div>
      <div
        className="column path"
      >
        Path
      </div>
    </div>
  </div>
  <div
    className="ui grid table-content"
  >
    <div
      className="row clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id1
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        GET
         
        /path
      </div>
    </div>
    <div
      className="row clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id2
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        POST
         
        /path2
      </div>
    </div>
    <div
      className="row clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id3
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        POST
         
        /path3
      </div>
    </div>
    <div
      className="row clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id4
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        POST
         
        /path4
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots trace list list traces selected 1`] = `
<div
  id="logs-console"
>
  <div
    className="ui grid"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    <div
      className="row table-heading"
    >
      <div
        className="column summary"
      >
         
      </div>
      <div
        className="column activity"
      >
        Activity Id
      </div>
      <div
        className="column time"
      >
        Time
      </div>
      <div
        className="column path"
      >
        Path
      </div>
    </div>
  </div>
  <div
    className="ui grid table-content"
  >
    <div
      className="row active clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id1
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        GET
         
        /path
      </div>
    </div>
    <div
      className="row clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id2
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        POST
         
        /path2
      </div>
    </div>
    <div
      className="row clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id3
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        POST
         
        /path3
      </div>
    </div>
    <div
      className="row clickable"
    >
      <div
        className="column wrap-text summary"
      >
        <i
          aria-hidden="true"
          className="icon"
          title="direction"
        />
      </div>
      <div
        className="column wrap-text activity"
      >
        id4
      </div>
      <div
        className="column wrap-text time"
      >
        13:21:35.575
      </div>
      <div
        className="column wrap-text path"
      >
        POST
         
        /path4
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots trace logs Trace Logs toolbar and component 1`] = `
<div>
  <div
    className="logs-console-toolbar"
  >
    <button
      className="ui icon button pull-left clear-button"
      onClick={[Function]}
      role="button"
    >
      <i
        aria-hidden="true"
        className="trash alternate outline icon"
      />
    </button>
    <span
      className="filter-message.id pull-right"
    >
      <label
        htmlFor="dropdown"
      >
        Activity Id
      </label>
      <div
        aria-expanded={false}
        className="ui dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        />
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="left menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              All
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              id1
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              id2
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              id3
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              id4
            </span>
          </div>
        </div>
      </div>
    </span>
    <span
      className="filter-logger pull-right"
    >
      <label
        htmlFor="dropdown"
      >
        Logger
      </label>
      <div
        aria-expanded={false}
        className="ui dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        />
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="left menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              All
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              http.tracelog.downstream
            </span>
          </div>
        </div>
      </div>
    </span>
    <span
      className="filter-message.path pull-right"
    >
      <label
        htmlFor="dropdown"
      >
        Path
      </label>
      <div
        aria-expanded={false}
        className="ui dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        />
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="left menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              All
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              /path
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              /path2
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              /path3
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              /path4
            </span>
          </div>
        </div>
      </div>
    </span>
    <span
      className="filter-message.direction pull-right"
    >
      <label
        htmlFor="dropdown"
      >
        Inbound/Outbound
      </label>
      <div
        aria-expanded={false}
        className="ui dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        />
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="left menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={true}
            className="selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              All
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              direction
            </span>
          </div>
        </div>
      </div>
    </span>
    <span
      className="filter-message.httpMethod pull-right"
    >
      <label
        htmlFor="dropdown"
      >
        Method
      </label>
      <div
        aria-expanded={false}
        className="ui dropdown"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-live="polite"
          className="text"
          role="alert"
        >
          All
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="left menu transition"
        >
          <div
            aria-checked={true}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              All
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              GET
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              POST
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
  <div
    id="logs-console"
  >
    <div
      className="ui grid"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <div
        className="row table-heading"
      >
        <div
          className="column summary"
        >
           
        </div>
        <div
          className="column activity"
        >
          Activity Id
        </div>
        <div
          className="column time"
        >
          Time
        </div>
        <div
          className="column path"
        >
          Path
        </div>
      </div>
    </div>
    <div
      className="ui grid table-content"
    >
      <div
        className="row active clickable"
      >
        <div
          className="column wrap-text summary"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="direction"
          />
        </div>
        <div
          className="column wrap-text activity"
        >
          id1
        </div>
        <div
          className="column wrap-text time"
        >
          13:21:35.575
        </div>
        <div
          className="column wrap-text path"
        >
          GET
           
          /path
        </div>
      </div>
      <div
        className="row clickable"
      >
        <div
          className="column wrap-text summary"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="direction"
          />
        </div>
        <div
          className="column wrap-text activity"
        >
          id2
        </div>
        <div
          className="column wrap-text time"
        >
          13:21:35.575
        </div>
        <div
          className="column wrap-text path"
        >
          POST
           
          /path2
        </div>
      </div>
      <div
        className="row clickable"
      >
        <div
          className="column wrap-text summary"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="direction"
          />
        </div>
        <div
          className="column wrap-text activity"
        >
          id3
        </div>
        <div
          className="column wrap-text time"
        >
          13:21:35.575
        </div>
        <div
          className="column wrap-text path"
        >
          POST
           
          /path3
        </div>
      </div>
      <div
        className="row clickable"
      >
        <div
          className="column wrap-text summary"
        >
          <i
            aria-hidden="true"
            className="icon"
            title="direction"
          />
        </div>
        <div
          className="column wrap-text activity"
        >
          id4
        </div>
        <div
          className="column wrap-text time"
        >
          13:21:35.575
        </div>
        <div
          className="column wrap-text path"
        >
          POST
           
          /path4
        </div>
      </div>
    </div>
  </div>
</div>
`;
